--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=80.9.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "scikit-sampling"
 license = "MIT"
@@ -24,6 +28,11 @@ classifiers=[
 
 dependencies = [
     "scipy>=1.15.0,<2",
+]
+
+[project.optional-dependencies]
+build = [
+    "setuptools>=80.9.0,<90",
 ]
 
 [dependency-groups]
