--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
+[build-system]
+requires = ["setuptools>=80.9.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "scikit-sampling"
 license = "MIT"
+license-files = ["LICENSE"]
 readme = "README.md"
 version = "0.1.0"
 requires-python = ">=3.10"
 description = "A set of python modules for dataset sampling"
-url = "https://github.com/leomaurodesenv/scikit-sampling"
 authors = [
   {name = "Leonardo Moraes", email = "leomaurodesenv@users.noreply.github.com"}
 ]
@@ -15,7 +19,6 @@ classifiers=[
   "Programming Language :: Python",
   "Topic :: Scientific/Engineering",
   "Development Status :: 4 - Beta",
-  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
@@ -25,6 +28,11 @@ classifiers=[
 
 dependencies = [
     "scipy>=1.15.0,<2",
+]
+
+[project.optional-dependencies]
+build = [
+    "setuptools>=80.9.0,<90",
 ]
 
 [dependency-groups]
