--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=80.9.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "scikit-sampling"
 license = "MIT"
@@ -30,9 +26,16 @@ dependencies = [
     "scipy>=1.15.0,<2",
 ]
 
+[project.urls]
+homepage = "https://github.com/leomaurodesenv/scikit-sampling"
+source = "https://github.com/leomaurodesenv/scikit-sampling"
+tracker = "https://github.com/leomaurodesenv/scikit-sampling/issues"
+
 [project.optional-dependencies]
 build = [
     "setuptools>=80.9.0,<90",
+    "uv>=0.7.12,<0.8",
+    "python-semantic-release~=10.0",
 ]
 
 [dependency-groups]
@@ -48,3 +51,23 @@ pythonpath = [
   "."
 ]
 addopts = "--cov=sksampling --cov-report term-missing"
+
+[build-system]
+requires = ["setuptools>=80.9.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.semantic_release]
+build_command = """
+  uv lock --offline
+  git add uv.lock
+  uv build
+"""
+
+[tool.semantic_release.branches.main]
+match = "(main|master)"
+prerelease = false
+
+[tool.semantic_release.branches.feature]
+match = "feat/.+"
+prerelease = true
+prerelease_token = "alpha"
