--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
       - run: uv sync --all-extras
-      - run: uv run semantic-release version
+      - run: uv run build
       - uses: actions/upload-artifact@v4
         with:
           name: python-package-distributions
