feat(package): bump version to 1.0.2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,12 @@ name: "Release"
 run-name: Publishing on "${{ github.ref }}" by "${{ github.actor }}"
 on:
   release:
-    type: published
+    type: released
 
 jobs:
   # Run build
   build:
+    if: "!github.event.release.prerelease"
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
