--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: "Release"
 run-name: Publishing on "${{ github.ref }}" by "${{ github.actor }}"
 on:
   release:
-    type: released
+    types: [published]
 
 jobs:
   # Run build
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v5
       - run: uv sync --all-extras
-      - run: uv run semantic-release version
+      - run: uv build
       - uses: actions/upload-artifact@v4
         with:
           name: python-package-distributions
